# fastSceneUnderstanding

./: .gitignore  README.md  list.txt  main.lua  points.txt  process.lua  run.lua  test.sh
cv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  label  label.cpp
cv/temp/: luaavg.cpp
tools/: clustering.lua
